SCJ-27: Fixed colour contrast issue

--- a/app/ClientSrc/sass/_bootstrapOverrides.scss
+++ b/app/ClientSrc/sass/_bootstrapOverrides.scss
@@ -86,6 +86,7 @@ label:not(.btn) {
 
 .text-danger {
     font-size: 1.2rem;
+    color: #c62f3d !important;
     > span {
         display: block;
         margin-top: 8px;
